--- a/XRViewer/RequestPermissionsController/RequestXRPermissionsViewController.xib
+++ b/XRViewer/RequestPermissionsController/RequestXRPermissionsViewController.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,23 +20,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="Jyd-Ce-OT1">
-                    <rect key="frame" x="8" y="20" width="284" height="280"/>
+                    <rect key="frame" x="8" y="20" width="398" height="842"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5Kj-3v-Ygm">
-                            <rect key="frame" x="0.0" y="0.0" width="284" height="45.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="398" height="45.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5A6-t2-WFB">
-                                    <rect key="frame" x="0.0" y="0.0" width="284" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="398" height="20.5"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKB-fU-TLq">
-                                    <rect key="frame" x="0.0" y="28.5" width="284" height="17"/>
+                                    <rect key="frame" x="0.0" y="28.5" width="398" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -45,7 +44,7 @@
                             </subviews>
                         </stackView>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="a1S-Ka-aGi">
-                            <rect key="frame" x="0.0" y="77.5" width="284" height="202.5"/>
+                            <rect key="frame" x="0.0" y="77.5" width="398" height="764.5"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                     </subviews>
@@ -62,12 +61,12 @@
             <constraints>
                 <constraint firstItem="Jyd-Ce-OT1" firstAttribute="leading" secondItem="Q5j-6v-a37" secondAttribute="leading" constant="8" id="2je-iF-WJU"/>
                 <constraint firstItem="Q5j-6v-a37" firstAttribute="trailing" secondItem="Jyd-Ce-OT1" secondAttribute="trailing" constant="8" id="EKE-0J-yLE"/>
-                <constraint firstAttribute="bottom" secondItem="Jyd-Ce-OT1" secondAttribute="bottom" id="Eb2-HT-eli"/>
+                <constraint firstItem="Q5j-6v-a37" firstAttribute="bottom" secondItem="Jyd-Ce-OT1" secondAttribute="bottom" id="Eb2-HT-eli"/>
                 <constraint firstItem="Jyd-Ce-OT1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="Kzg-d4-dI6"/>
                 <constraint firstItem="Jyd-Ce-OT1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="kg8-nW-nWl"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Q5j-6v-a37"/>
+            <point key="canvasLocation" x="301.44927536231887" y="243.08035714285714"/>
         </view>
     </objects>
 </document>
